--- a/tealand/index.html
+++ b/tealand/index.html
@@ -6,7 +6,7 @@
 	<meta charset="UTF-8">
 	<meta name="format-detection" content="telephone=no">
 	<!-- <style>body{opacity: 0;}</style> -->
-	<link rel="stylesheet" href="css/style.min.css?_v=20240307122318">
+	<link rel="stylesheet" href="css/style.min.css?_v=20250715150818">
 	<link rel="shortcut icon" href="favicon.ico">
 	<!-- <meta name="robots" content="noindex, nofollow"> -->
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -47,16 +47,16 @@
 				<div class="hero__slider swiper">
 					<div class="hero__wrapper swiper-wrapper">
 						<div class="hero__slide swiper-slide">
-							<picture><source srcset="img/hero/01.webp" type="image/webp"><img data-prlx-mouse data-prlx-cx="700" data-prlx-cy="700" data-prlx-a="15" class="hero__image ibg" src="img/hero/01.jpg" alt="Tea"></picture>
+							<picture><source srcset="img/hero/01.webp" type="image/webp"><img class="hero__image ibg" src="img/hero/01.jpg" alt="Tea"></picture>
 						</div>
 						<div class="hero__slide swiper-slide">
-							<picture><source srcset="img/hero/02.webp" type="image/webp"><img data-prlx-mouse data-prlx-cx="700" data-prlx-cy="700" data-prlx-a="15" class="hero__image ibg" src="img/hero/02.jpg" alt="Tea"></picture>
+							<picture><source srcset="img/hero/02.webp" type="image/webp"><img class="hero__image ibg" src="img/hero/02.jpg" alt="Tea"></picture>
 						</div>
 						<div class="hero__slide swiper-slide">
-							<picture><source srcset="img/hero/03.webp" type="image/webp"><img data-prlx-mouse data-prlx-cx="700" data-prlx-cy="700" data-prlx-a="15" class="hero__image ibg" src="img/hero/03.jpg" alt="Tea"></picture>
+							<picture><source srcset="img/hero/03.webp" type="image/webp"><img class="hero__image ibg" src="img/hero/03.jpg" alt="Tea"></picture>
 						</div>
 						<div class="hero__slide swiper-slide">
-							<picture><source srcset="img/hero/04.webp" type="image/webp"><img data-prlx-mouse data-prlx-cx="700" data-prlx-cy="700" data-prlx-a="15" class="hero__image ibg" src="img/hero/04.jpg" alt="Tea"></picture>
+							<picture><source srcset="img/hero/04.webp" type="image/webp"><img class="hero__image ibg" src="img/hero/04.jpg" alt="Tea"></picture>
 						</div>
 					</div>
 				</div>
@@ -555,7 +555,7 @@
 			</div>
 		</footer>
 	</div>
-	<script src="js/app.min.js?_v=20240307122318"></script>
+	<script src="js/app.min.js?_v=20250715150818"></script>
 </body>
 
 </html>
