--- a/watermark/payment.html
+++ b/watermark/payment.html
@@ -3,13 +3,11 @@
 	<head>
 		<meta charset="UTF-8">
 		<meta name="viewport" content="width=device-width, initial-scale=1.0">
-		<link rel="shortcut icon" href="./assets/img/favicon.ico">
+		<link rel="shortcut icon" href="assets/img/favicon.ico">
 		<title>Payment</title>
-		<script type="module" crossorigin="" src="./js/app.min.js?v=1753088645007"></script>
-		<link rel="stylesheet" crossorigin="" href="./css/app.min.css?v=1753088645007">
-		<link rel="stylesheet" crossorigin="" href="./css/payment.min.css?v=1753088645007">
-		<link rel="preload" as="style" href="./css/webfonts.min.css">
-		<link rel="stylesheet" media="print" onload="this.onload=null;this.removeAttribute('media');" href="./css/webfonts.min.css">
+		<script type="module" crossorigin="" src="./js/app.min.js?v=1753093087423"></script>
+		<link rel="stylesheet" crossorigin="" href="./css/app.min.css?v=1753093087423">
+		<link rel="stylesheet" crossorigin="" href="./css/payment.min.css?v=1753093087423">
 	</head>
 	<body>
 		<div class="wrapper">
@@ -171,5 +169,68 @@
 				</div>
 			</footer>
 		</div>
+		<ul id="fls-dev-panel">
+			<li>
+				<a href="verification.html">verification</a>
+			</li>
+			<li>
+				<a href="verification-1.html">verification-1</a>
+			</li>
+			<li>
+				<a href="platform.html">platform</a>
+			</li>
+			<li>
+				<a href="payment.html">payment</a>
+			</li>
+			<li>
+				<a href="index.html">index</a>
+			</li>
+			<li>
+				<a href="download.html">download</a>
+			</li>
+			<li>
+				<a href="buy.html">buy</a>
+			</li>
+			<li>
+				<a href="activate.html">activate</a>
+			</li>
+		</ul>
+		<style>
+			#fls-dev-panel{
+				position: fixed;
+				left: 10px;
+				padding: 15px 25px 15px 15px;
+				border-radius: 0 10px 10px 0;
+				top: 10%;
+				color: #ffffff;
+				background-color: rgba(51, 51, 51, 0.5);
+				transform: translate(-100%, 0px);
+				max-height: 80svh;
+				overflow: auto;
+				transition: all 300ms;
+				z-index: 9999;
+				font-family: Arial, "Helvetica Neue", Helvetica, sans-serif;
+			}
+			#fls-dev-panel li{
+				list-style:none;
+			}
+			#fls-dev-panel hr{
+				border-bottom: 1px solid;
+			}
+			#fls-dev-panel:hover{
+				left: 0px;
+				transform: translate(0, 0);
+			}
+			#fls-dev-panel a{
+				text-decoration: none;
+				color: inherit;
+			}
+			#fls-dev-panel a:hover {
+				text-decoration: underline;
+			}
+			#fls-dev-panel li:not(:last-child) {
+				margin-bottom: 10px;
+			}
+		</style>
 	</body>
 </html>
