--- a/watermark/buy.html
+++ b/watermark/buy.html
@@ -5,9 +5,9 @@
 		<meta name="viewport" content="width=device-width, initial-scale=1.0">
 		<link rel="shortcut icon" href="assets/img/favicon.ico">
 		<title>Buy</title>
-		<script type="module" crossorigin="" src="./js/app.min.js?v=1753096460226"></script>
-		<link rel="stylesheet" crossorigin="" href="./css/app.min.css?v=1753096460226">
-		<link rel="stylesheet" crossorigin="" href="./css/buy.min.css?v=1753096460226">
+		<script type="module" crossorigin="" src="./js/app.min.js?v=1753124007889"></script>
+		<link rel="stylesheet" crossorigin="" href="./css/app.min.css?v=1753124007889">
+		<link rel="stylesheet" crossorigin="" href="./css/buy.min.css?v=1753124007889">
 	</head>
 	<body>
 		<div class="wrapper">
@@ -82,7 +82,7 @@
 								</div>
 							</div>
 							<div class="column-buy__actions">
-								<a href="#" class="column-buy__button button button--eye --icon-arrow-left">Go back</a>
+								<a href="platform.html" class="column-buy__button button button--eye --icon-arrow-left">Go back</a>
 							</div>
 						</div>
 						<form class="buy__form form-buy">
