--- a/watermark/platform.html
+++ b/watermark/platform.html
@@ -5,10 +5,10 @@
 		<meta name="viewport" content="width=device-width, initial-scale=1.0">
 		<link rel="shortcut icon" href="assets/img/favicon.ico">
 		<title>Platform</title>
-		<script type="module" crossorigin="" src="./js/app.min.js?v=1753096460224"></script>
-		<link rel="stylesheet" crossorigin="" href="./css/app.min.css?v=1753096460224">
-		<link rel="stylesheet" crossorigin="" href="./css/platform.min.css?v=1753096460224">
-		<link rel="stylesheet" crossorigin="" href="./css/blockhead.min.css?v=1753096460224">
+		<script type="module" crossorigin="" src="./js/app.min.js?v=1753124007891"></script>
+		<link rel="stylesheet" crossorigin="" href="./css/app.min.css?v=1753124007891">
+		<link rel="stylesheet" crossorigin="" href="./css/platform.min.css?v=1753124007891">
+		<link rel="stylesheet" crossorigin="" href="./css/blockhead.min.css?v=1753124007891">
 	</head>
 	<body>
 		<div class="wrapper">
@@ -63,9 +63,9 @@
 						<div data-fls-blockhead="" class="platform__blockhead blockhead blockhead--platform">
 							<h2 class="blockhead__title">Сhoose a platform</h2>
 							<div class="blockhead__actions actions-blockhead">
-								<a href="#" data-fls-button="" class="actions-blockhead__button button">for Windows</a>
-								<a href="#" data-fls-button="" class="actions-blockhead__button button">for Linux</a>
-								<a href="#" data-fls-button="" class="actions-blockhead__button button">for macOs</a>
+								<a href="buy.html" data-fls-button="" class="actions-blockhead__button button --icon-windows">for Windows</a>
+								<a href="buy.html" data-fls-button="" class="actions-blockhead__button button --icon-linux">for Linux</a>
+								<a href="buy.html" data-fls-button="" class="actions-blockhead__button button --icon-macOs">for macOs</a>
 							</div>
 						</div>
 					</div>
