--- a/watermark/download.html
+++ b/watermark/download.html
@@ -5,11 +5,11 @@
 		<meta name="viewport" content="width=device-width, initial-scale=1.0">
 		<link rel="shortcut icon" href="assets/img/favicon.ico">
 		<title>Download</title>
-		<script type="module" crossorigin="" src="./js/download.min.js?v=1753124007887"></script>
+		<script type="module" crossorigin="" src="./js/download.min.js?v=1753172541043"></script>
 		<link rel="modulepreload" crossorigin="" href="./js/app.min.js">
-		<link rel="stylesheet" crossorigin="" href="./css/app.min.css?v=1753124007887">
-		<link rel="stylesheet" crossorigin="" href="./css/download.min.css?v=1753124007887">
-		<link rel="stylesheet" crossorigin="" href="./css/input.min.css?v=1753124007887">
+		<link rel="stylesheet" crossorigin="" href="./css/app.min.css?v=1753172541043">
+		<link rel="stylesheet" crossorigin="" href="./css/download.min.css?v=1753172541043">
+		<link rel="stylesheet" crossorigin="" href="./css/input.min.css?v=1753172541043">
 	</head>
 	<body>
 		<div class="wrapper">
@@ -51,7 +51,7 @@
 							<span class="desktop">Download</span>
 							<span class="mob">Open app</span>
 						</a>
-						<a href="#" data-fls-button="" class="actions-header__button button button--icon">Buy</a>
+						<a href="buy.html" data-fls-button="" class="actions-header__button button button--icon">Buy</a>
 					</div>
 					<button type="button" data-fls-menu="" class="menu__icon icon-menu">
 						<span></span>
