--- a/watermark/platform.html
+++ b/watermark/platform.html
@@ -5,10 +5,10 @@
 		<meta name="viewport" content="width=device-width, initial-scale=1.0">
 		<link rel="shortcut icon" href="assets/img/favicon.ico">
 		<title>Platform</title>
-		<script type="module" crossorigin="" src="./js/app.min.js?v=1753124007891"></script>
-		<link rel="stylesheet" crossorigin="" href="./css/app.min.css?v=1753124007891">
-		<link rel="stylesheet" crossorigin="" href="./css/platform.min.css?v=1753124007891">
-		<link rel="stylesheet" crossorigin="" href="./css/blockhead.min.css?v=1753124007891">
+		<script type="module" crossorigin="" src="./js/app.min.js?v=1753172541039"></script>
+		<link rel="stylesheet" crossorigin="" href="./css/app.min.css?v=1753172541039">
+		<link rel="stylesheet" crossorigin="" href="./css/platform.min.css?v=1753172541039">
+		<link rel="stylesheet" crossorigin="" href="./css/blockhead.min.css?v=1753172541039">
 	</head>
 	<body>
 		<div class="wrapper">
@@ -50,7 +50,7 @@
 							<span class="desktop">Download</span>
 							<span class="mob">Open app</span>
 						</a>
-						<a href="#" data-fls-button="" class="actions-header__button button button--icon">Buy</a>
+						<a href="buy.html" data-fls-button="" class="actions-header__button button button--icon">Buy</a>
 					</div>
 					<button type="button" data-fls-menu="" class="menu__icon icon-menu">
 						<span></span>
