--- a/watermark/platform.html
+++ b/watermark/platform.html
@@ -5,10 +5,10 @@
 		<meta name="viewport" content="width=device-width, initial-scale=1.0">
 		<link rel="shortcut icon" href="assets/img/favicon.ico">
 		<title>Platform</title>
-		<script type="module" crossorigin="" src="./js/app.min.js?v=1753172541039"></script>
-		<link rel="stylesheet" crossorigin="" href="./css/app.min.css?v=1753172541039">
-		<link rel="stylesheet" crossorigin="" href="./css/platform.min.css?v=1753172541039">
-		<link rel="stylesheet" crossorigin="" href="./css/blockhead.min.css?v=1753172541039">
+		<script type="module" crossorigin="" src="./js/app.min.js?v=1753181313252"></script>
+		<link rel="stylesheet" crossorigin="" href="./css/app.min.css?v=1753181313252">
+		<link rel="stylesheet" crossorigin="" href="./css/platform.min.css?v=1753181313252">
+		<link rel="stylesheet" crossorigin="" href="./css/blockhead.min.css?v=1753181313252">
 	</head>
 	<body>
 		<div class="wrapper">
@@ -72,6 +72,7 @@
 				</section>
 			</main>
 			<footer data-fls-footer="" class="footer">
+				<button id="scrollUpBtn" class="footer__button --icon-arrow-top"></button>
 				<div class="footer__container">
 					<div class="footer__column">
 						<a href="index.html" class="footer__logo">
