--- a/watermark/activate.html
+++ b/watermark/activate.html
@@ -5,10 +5,10 @@
 		<meta name="viewport" content="width=device-width, initial-scale=1.0">
 		<link rel="shortcut icon" href="assets/img/favicon.ico">
 		<title>Activate</title>
-		<script type="module" crossorigin="" src="./js/app.min.js?v=1753172541041"></script>
-		<link rel="stylesheet" crossorigin="" href="./css/app.min.css?v=1753172541041">
-		<link rel="stylesheet" crossorigin="" href="./css/activate.min.css?v=1753172541041">
-		<link rel="stylesheet" crossorigin="" href="./css/input.min.css?v=1753172541041">
+		<script type="module" crossorigin="" src="./js/app.min.js?v=1753181313255"></script>
+		<link rel="stylesheet" crossorigin="" href="./css/app.min.css?v=1753181313255">
+		<link rel="stylesheet" crossorigin="" href="./css/activate.min.css?v=1753181313255">
+		<link rel="stylesheet" crossorigin="" href="./css/input.min.css?v=1753181313255">
 	</head>
 	<body>
 		<div class="wrapper">
@@ -83,6 +83,7 @@
 				</section>
 			</main>
 			<footer data-fls-footer="" class="footer">
+				<button id="scrollUpBtn" class="footer__button --icon-arrow-top"></button>
 				<div class="footer__container">
 					<div class="footer__column">
 						<a href="index.html" class="footer__logo">
