--- a/watermark/download.html
+++ b/watermark/download.html
@@ -5,11 +5,11 @@
 		<meta name="viewport" content="width=device-width, initial-scale=1.0">
 		<link rel="shortcut icon" href="assets/img/favicon.ico">
 		<title>Download</title>
-		<script type="module" crossorigin="" src="./js/download.min.js?v=1753172541043"></script>
+		<script type="module" crossorigin="" src="./js/download.min.js?v=1753181313254"></script>
 		<link rel="modulepreload" crossorigin="" href="./js/app.min.js">
-		<link rel="stylesheet" crossorigin="" href="./css/app.min.css?v=1753172541043">
-		<link rel="stylesheet" crossorigin="" href="./css/download.min.css?v=1753172541043">
-		<link rel="stylesheet" crossorigin="" href="./css/input.min.css?v=1753172541043">
+		<link rel="stylesheet" crossorigin="" href="./css/app.min.css?v=1753181313254">
+		<link rel="stylesheet" crossorigin="" href="./css/download.min.css?v=1753181313254">
+		<link rel="stylesheet" crossorigin="" href="./css/input.min.css?v=1753181313254">
 	</head>
 	<body>
 		<div class="wrapper">
@@ -121,6 +121,7 @@
 				</section>
 			</main>
 			<footer data-fls-footer="" class="footer">
+				<button id="scrollUpBtn" class="footer__button --icon-arrow-top"></button>
 				<div class="footer__container">
 					<div class="footer__column">
 						<a href="index.html" class="footer__logo">
