--- a/watermark/index.html
+++ b/watermark/index.html
@@ -5,11 +5,11 @@
 		<meta name="viewport" content="width=device-width, initial-scale=1.0">
 		<link rel="shortcut icon" href="assets/img/favicon.ico">
 		<title>Home</title>
-		<script type="module" crossorigin="" src="./js/index.min.js?v=1753172541044"></script>
+		<script type="module" crossorigin="" src="./js/index.min.js?v=1753181313256"></script>
 		<link rel="modulepreload" crossorigin="" href="./js/app.min.js">
-		<link rel="stylesheet" crossorigin="" href="./css/app.min.css?v=1753172541044">
-		<link rel="stylesheet" crossorigin="" href="./css/index.min.css?v=1753172541044">
-		<link rel="stylesheet" crossorigin="" href="./css/blockhead.min.css?v=1753172541044">
+		<link rel="stylesheet" crossorigin="" href="./css/app.min.css?v=1753181313256">
+		<link rel="stylesheet" crossorigin="" href="./css/index.min.css?v=1753181313256">
+		<link rel="stylesheet" crossorigin="" href="./css/blockhead.min.css?v=1753181313256">
 	</head>
 	<body>
 		<div class="wrapper">
@@ -128,6 +128,7 @@
 						<div class="trigger-blockhead__item">Quick and Easy Setup</div>
 					</div>
 				</section>
+				<a href="home.html" class="page__button --icon-arrow-bottom"></a>
 				<section class="page__sliders sliders">
 					<div class="sliders__container">
 						<button type="button" class="sliders__button sliders__button--prev swiper-button-prev --icon-arrow"></button>
@@ -1350,6 +1351,7 @@
 				</section>
 			</main>
 			<footer data-fls-footer="" class="footer">
+				<button id="scrollUpBtn" class="footer__button --icon-arrow-top"></button>
 				<div class="footer__container">
 					<div class="footer__column">
 						<a href="index.html" class="footer__logo">
