--- a/watermark/payment.html
+++ b/watermark/payment.html
@@ -5,9 +5,9 @@
 		<meta name="viewport" content="width=device-width, initial-scale=1.0">
 		<link rel="shortcut icon" href="assets/img/favicon.ico">
 		<title>Payment</title>
-		<script type="module" crossorigin="" src="./js/app.min.js?v=1753172541042"></script>
-		<link rel="stylesheet" crossorigin="" href="./css/app.min.css?v=1753172541042">
-		<link rel="stylesheet" crossorigin="" href="./css/payment.min.css?v=1753172541042">
+		<script type="module" crossorigin="" src="./js/app.min.js?v=1753181313250"></script>
+		<link rel="stylesheet" crossorigin="" href="./css/app.min.css?v=1753181313250">
+		<link rel="stylesheet" crossorigin="" href="./css/payment.min.css?v=1753181313250">
 	</head>
 	<body>
 		<div class="wrapper">
@@ -106,6 +106,7 @@
 				</section>
 			</main>
 			<footer data-fls-footer="" class="footer">
+				<button id="scrollUpBtn" class="footer__button --icon-arrow-top"></button>
 				<div class="footer__container">
 					<div class="footer__column">
 						<a href="index.html" class="footer__logo">
