--- a/watermark/verification.html
+++ b/watermark/verification.html
@@ -5,10 +5,10 @@
 		<meta name="viewport" content="width=device-width, initial-scale=1.0">
 		<link rel="shortcut icon" href="assets/img/favicon.ico">
 		<title>Verification</title>
-		<script type="module" crossorigin="" src="./js/app.min.js?v=1753172541037"></script>
-		<link rel="stylesheet" crossorigin="" href="./css/app.min.css?v=1753172541037">
-		<link rel="stylesheet" crossorigin="" href="./css/verification.min.css?v=1753172541037">
-		<link rel="stylesheet" crossorigin="" href="./css/input.min.css?v=1753172541037">
+		<script type="module" crossorigin="" src="./js/app.min.js?v=1753181313251"></script>
+		<link rel="stylesheet" crossorigin="" href="./css/app.min.css?v=1753181313251">
+		<link rel="stylesheet" crossorigin="" href="./css/verification.min.css?v=1753181313251">
+		<link rel="stylesheet" crossorigin="" href="./css/input.min.css?v=1753181313251">
 	</head>
 	<body>
 		<div class="wrapper">
@@ -90,6 +90,7 @@
 				</section>
 			</main>
 			<footer data-fls-footer="" class="footer">
+				<button id="scrollUpBtn" class="footer__button --icon-arrow-top"></button>
 				<div class="footer__container">
 					<div class="footer__column">
 						<a href="index.html" class="footer__logo">
