--- a/dananz/teams.html
+++ b/dananz/teams.html
@@ -8,9 +8,9 @@
 		<meta name="viewport" content="width=device-width, initial-scale=1.0">
 		<link rel="shortcut icon" href="assets/img/favicon.ico">
 		<title>Teams</title>
-		<script type="module" crossorigin="" src="./js/app.min.js?v=1754296533865"></script>
-		<link rel="stylesheet" crossorigin="" href="./css/app.min.css?v=1754296533865">
-		<link rel="stylesheet" crossorigin="" href="./css/teams.min.css?v=1754296533865">
+		<script type="module" crossorigin="" src="./js/app.min.js?v=1754297124195"></script>
+		<link rel="stylesheet" crossorigin="" href="./css/app.min.css?v=1754297124195">
+		<link rel="stylesheet" crossorigin="" href="./css/teams.min.css?v=1754297124195">
 		<link rel="preload" as="style" href="./css/webfonts.min.css">
 		<link rel="stylesheet" media="print" onload="this.onload=null;this.removeAttribute('media');" href="./css/webfonts.min.css">
 	</head>
@@ -290,5 +290,65 @@
 				</div>
 			</footer>
 		</div>
+		<ul id="fls-dev-panel">
+			<li>
+				<a href="teams.html">teams</a>
+			</li>
+			<li>
+				<a href="services.html">services</a>
+			</li>
+			<li>
+				<a href="portfolio.html">portfolio</a>
+			</li>
+			<li>
+				<a href="portfolio-details.html">portfolio-details</a>
+			</li>
+			<li>
+				<a href="index.html">index</a>
+			</li>
+			<li>
+				<a href="contact-us.html">contact-us</a>
+			</li>
+			<li>
+				<a href="about.html">about</a>
+			</li>
+		</ul>
+		<style>
+			#fls-dev-panel{
+				position: fixed;
+				left: 10px;
+				padding: 15px 25px 15px 15px;
+				border-radius: 0 10px 10px 0;
+				top: 10%;
+				color: #ffffff;
+				background-color: rgba(51, 51, 51, 0.5);
+				transform: translate(-100%, 0px);
+				max-height: 80svh;
+				overflow: auto;
+				transition: all 300ms;
+				z-index: 9999;
+				font-family: Arial, "Helvetica Neue", Helvetica, sans-serif;
+			}
+			#fls-dev-panel li{
+				list-style:none;
+			}
+			#fls-dev-panel hr{
+				border-bottom: 1px solid;
+			}
+			#fls-dev-panel:hover{
+				left: 0px;
+				transform: translate(0, 0);
+			}
+			#fls-dev-panel a{
+				text-decoration: none;
+				color: inherit;
+			}
+			#fls-dev-panel a:hover {
+				text-decoration: underline;
+			}
+			#fls-dev-panel li:not(:last-child) {
+				margin-bottom: 10px;
+			}
+		</style>
 	</body>
 </html>
