--- a/dananz/index.html
+++ b/dananz/index.html
@@ -8,11 +8,12 @@
 		<meta name="viewport" content="width=device-width, initial-scale=1.0">
 		<link rel="shortcut icon" href="assets/img/favicon.ico">
 		<title>Home</title>
-		<script type="module" crossorigin="" src="./js/app.min.js?v=1755085804634"></script>
-		<script type="module" crossorigin="" src="./js/digcounter.min.js?v=1755085804634"></script>
-		<link rel="stylesheet" crossorigin="" href="./css/app.min.css?v=1755085804634">
-		<link rel="stylesheet" crossorigin="" href="./css/index.min.css?v=1755085804634">
-		<link rel="stylesheet" crossorigin="" href="./css/aboutblock.min.css?v=1755085804634">
+		<script type="module" crossorigin="" src="./js/index.min.js?v=1755086684863"></script>
+		<link rel="modulepreload" crossorigin="" href="./js/app.min.js">
+		<link rel="modulepreload" crossorigin="" href="./js/digcounter.min.js">
+		<link rel="stylesheet" crossorigin="" href="./css/app.min.css?v=1755086684863">
+		<link rel="stylesheet" crossorigin="" href="./css/index.min.css?v=1755086684863">
+		<link rel="stylesheet" crossorigin="" href="./css/aboutblock.min.css?v=1755086684863">
 		<link rel="preload" as="style" href="./css/webfonts.min.css">
 		<link rel="stylesheet" media="print" onload="this.onload=null;this.removeAttribute('media');" href="./css/webfonts.min.css">
 	</head>
