--- a/dananz/services.html
+++ b/dananz/services.html
@@ -1,13 +1,18 @@
 <!doctype html>
 <html lang="en">
 	<head>
+		<style data-fls-preloader="false" rel="preload">
+			body > *:not(.fls-preloader) {opacity: 0;visibility: hidden;}[data-fls-preloader-loaded] body > *:not(.fls-preloader) {transition: opacity 1s ease 0s;opacity: 1;visibility: visible;}
+		</style>
 		<meta charset="UTF-8">
 		<meta name="viewport" content="width=device-width, initial-scale=1.0">
 		<link rel="shortcut icon" href="assets/img/favicon.ico">
 		<title>Services</title>
-		<script type="module" crossorigin="" src="./js/app.min.js?v=1755086684862"></script>
-		<link rel="stylesheet" crossorigin="" href="./css/app.min.css?v=1755086684862">
-		<link rel="stylesheet" crossorigin="" href="./css/services.min.css?v=1755086684862">
+		<script type="module" crossorigin="" src="./js/app.min.js?v=1755885725792"></script>
+		<script type="module" crossorigin="" src="./js/preloader.min.js?v=1755885725792"></script>
+		<link rel="stylesheet" crossorigin="" href="./css/app.min.css?v=1755885725792">
+		<link rel="stylesheet" crossorigin="" href="./css/preloader.min.css?v=1755885725792">
+		<link rel="stylesheet" crossorigin="" href="./css/services.min.css?v=1755885725792">
 		<link rel="preload" as="style" href="./css/webfonts.min.css">
 		<link rel="stylesheet" media="print" onload="this.onload=null;this.removeAttribute('media');" href="./css/webfonts.min.css">
 	</head>
