--- a/dananz/index.html
+++ b/dananz/index.html
@@ -1,19 +1,15 @@
 <!doctype html>
 <html lang="en">
 	<head>
-		<style data-fls-preloader="false" rel="preload">
-			body > *:not(.fls-preloader) {opacity: 0;visibility: hidden;}[data-fls-preloader-loaded] body > *:not(.fls-preloader) {transition: opacity 0.5s ease 0s;opacity: 1;visibility: visible;}
-		</style>
 		<meta charset="UTF-8">
 		<meta name="viewport" content="width=device-width, initial-scale=1.0">
 		<link rel="shortcut icon" href="assets/img/favicon.ico">
 		<title>Home</title>
-		<script type="module" crossorigin="" src="./js/index.min.js?v=1755086684863"></script>
-		<link rel="modulepreload" crossorigin="" href="./js/app.min.js">
-		<link rel="modulepreload" crossorigin="" href="./js/digcounter.min.js">
-		<link rel="stylesheet" crossorigin="" href="./css/app.min.css?v=1755086684863">
-		<link rel="stylesheet" crossorigin="" href="./css/index.min.css?v=1755086684863">
-		<link rel="stylesheet" crossorigin="" href="./css/aboutblock.min.css?v=1755086684863">
+		<script type="module" crossorigin="" src="./js/app.min.js?v=1755885725790"></script>
+		<script type="module" crossorigin="" src="./js/digcounter.min.js?v=1755885725790"></script>
+		<link rel="stylesheet" crossorigin="" href="./css/app.min.css?v=1755885725790">
+		<link rel="stylesheet" crossorigin="" href="./css/index.min.css?v=1755885725790">
+		<link rel="stylesheet" crossorigin="" href="./css/aboutblock.min.css?v=1755885725790">
 		<link rel="preload" as="style" href="./css/webfonts.min.css">
 		<link rel="stylesheet" media="print" onload="this.onload=null;this.removeAttribute('media');" href="./css/webfonts.min.css">
 	</head>
