--- a/dananz/portfolio-details.html
+++ b/dananz/portfolio-details.html
@@ -8,11 +8,9 @@
 		<meta name="viewport" content="width=device-width, initial-scale=1.0">
 		<link rel="shortcut icon" href="assets/img/favicon.ico">
 		<title>Portfolio-details</title>
-		<script type="module" crossorigin="" src="./js/app.min.js?v=1755885725789"></script>
-		<script type="module" crossorigin="" src="./js/preloader.min.js?v=1755885725789"></script>
-		<link rel="stylesheet" crossorigin="" href="./css/app.min.css?v=1755885725789">
-		<link rel="stylesheet" crossorigin="" href="./css/preloader.min.css?v=1755885725789">
-		<link rel="stylesheet" crossorigin="" href="./css/portfolio-details.min.css?v=1755885725789">
+		<script type="module" crossorigin="" src="./js/app.min.js?v=1755886206750"></script>
+		<link rel="stylesheet" crossorigin="" href="./css/app.min.css?v=1755886206750">
+		<link rel="stylesheet" crossorigin="" href="./css/portfolio-details.min.css?v=1755886206750">
 		<link rel="preload" as="style" href="./css/webfonts.min.css">
 		<link rel="stylesheet" media="print" onload="this.onload=null;this.removeAttribute('media');" href="./css/webfonts.min.css">
 	</head>
@@ -30,7 +28,7 @@
 						<nav class="menu__body">
 							<ul class="menu__list">
 								<li class="menu__item">
-									<a href="home.html" class="menu__link">Home</a>
+									<a href="index.html" class="menu__link">Home</a>
 								</li>
 								<li class="menu__item">
 									<a href="about.html" class="menu__link">About Us</a>
