--- a/dananz/portfolio.html
+++ b/dananz/portfolio.html
@@ -8,12 +8,10 @@
 		<meta name="viewport" content="width=device-width, initial-scale=1.0">
 		<link rel="shortcut icon" href="assets/img/favicon.ico">
 		<title>Portfolio</title>
-		<script type="module" crossorigin="" src="./js/app.min.js?v=1755885725792"></script>
-		<script type="module" crossorigin="" src="./js/preloader.min.js?v=1755885725792"></script>
-		<link rel="stylesheet" crossorigin="" href="./css/app.min.css?v=1755885725792">
-		<link rel="stylesheet" crossorigin="" href="./css/preloader.min.css?v=1755885725792">
-		<link rel="stylesheet" crossorigin="" href="./css/portfolio.min.css?v=1755885725792">
-		<link rel="stylesheet" crossorigin="" href="./css/aboutblock.min.css?v=1755885725792">
+		<script type="module" crossorigin="" src="./js/app.min.js?v=1755886206753"></script>
+		<link rel="stylesheet" crossorigin="" href="./css/app.min.css?v=1755886206753">
+		<link rel="stylesheet" crossorigin="" href="./css/portfolio.min.css?v=1755886206753">
+		<link rel="stylesheet" crossorigin="" href="./css/aboutblock.min.css?v=1755886206753">
 		<link rel="preload" as="style" href="./css/webfonts.min.css">
 		<link rel="stylesheet" media="print" onload="this.onload=null;this.removeAttribute('media');" href="./css/webfonts.min.css">
 	</head>
@@ -31,7 +29,7 @@
 						<nav class="menu__body">
 							<ul class="menu__list">
 								<li class="menu__item">
-									<a href="home.html" class="menu__link">Home</a>
+									<a href="index.html" class="menu__link">Home</a>
 								</li>
 								<li class="menu__item">
 									<a href="about.html" class="menu__link">About Us</a>
