--- a/dananz/index.html
+++ b/dananz/index.html
@@ -1,15 +1,18 @@
 <!doctype html>
 <html lang="en">
 	<head>
+		<style data-fls-preloader="false" rel="preload">
+			body > *:not(.fls-preloader) {opacity: 0;visibility: hidden;}[data-fls-preloader-loaded] body > *:not(.fls-preloader) {transition: opacity 1s ease 0s;opacity: 1;visibility: visible;}
+		</style>
 		<meta charset="UTF-8">
 		<meta name="viewport" content="width=device-width, initial-scale=1.0">
 		<link rel="shortcut icon" href="assets/img/favicon.ico">
 		<title>Home</title>
-		<script type="module" crossorigin="" src="./js/app.min.js?v=1755885725790"></script>
-		<script type="module" crossorigin="" src="./js/digcounter.min.js?v=1755885725790"></script>
-		<link rel="stylesheet" crossorigin="" href="./css/app.min.css?v=1755885725790">
-		<link rel="stylesheet" crossorigin="" href="./css/index.min.css?v=1755885725790">
-		<link rel="stylesheet" crossorigin="" href="./css/aboutblock.min.css?v=1755885725790">
+		<script type="module" crossorigin="" src="./js/app.min.js?v=1755886206755"></script>
+		<script type="module" crossorigin="" src="./js/digcounter.min.js?v=1755886206755"></script>
+		<link rel="stylesheet" crossorigin="" href="./css/app.min.css?v=1755886206755">
+		<link rel="stylesheet" crossorigin="" href="./css/index.min.css?v=1755886206755">
+		<link rel="stylesheet" crossorigin="" href="./css/aboutblock.min.css?v=1755886206755">
 		<link rel="preload" as="style" href="./css/webfonts.min.css">
 		<link rel="stylesheet" media="print" onload="this.onload=null;this.removeAttribute('media');" href="./css/webfonts.min.css">
 	</head>
@@ -27,7 +30,7 @@
 						<nav class="menu__body">
 							<ul class="menu__list">
 								<li class="menu__item">
-									<a href="home.html" class="menu__link menu__link--active">Home</a>
+									<a href="index.html" class="menu__link menu__link--active">Home</a>
 								</li>
 								<li class="menu__item">
 									<a href="about.html" class="menu__link">About Us</a>
