--- a/dananz/contact-us.html
+++ b/dananz/contact-us.html
@@ -8,10 +8,10 @@
 		<meta name="viewport" content="width=device-width, initial-scale=1.0">
 		<link rel="shortcut icon" href="assets/img/favicon.ico">
 		<title>Contact Us</title>
-		<script type="module" crossorigin="" src="./js/contact-us.min.js?v=1755934725302"></script>
+		<script type="module" crossorigin="" src="./js/contact-us.min.js?v=1755935516754"></script>
 		<link rel="modulepreload" crossorigin="" href="./js/app.min.js">
-		<link rel="stylesheet" crossorigin="" href="./css/app.min.css?v=1755934725302">
-		<link rel="stylesheet" crossorigin="" href="./css/contact-us.min.css?v=1755934725302">
+		<link rel="stylesheet" crossorigin="" href="./css/app.min.css?v=1755935516754">
+		<link rel="stylesheet" crossorigin="" href="./css/contact-us.min.css?v=1755935516754">
 		<link rel="preload" as="style" href="./css/webfonts.min.css">
 		<link rel="stylesheet" media="print" onload="this.onload=null;this.removeAttribute('media');" href="./css/webfonts.min.css">
 	</head>
@@ -55,7 +55,7 @@
 				</div>
 			</header>
 			<main class="page page--contact-us">
-				<section data-fls-watcher="" class="page__contact-us-hero contact-us-hero">
+				<section data-fls-watcher="" data-fls-watcher-once="" class="page__contact-us-hero contact-us-hero">
 					<div class="contact-us-hero__container">
 						<div data-fls-blockhead="" class="contact-us-hero__blockhead blockhead blockhead--center">
 							<h2 class="blockhead__title">Contact Us</h2>
@@ -107,7 +107,7 @@
 						</form>
 					</div>
 				</section>
-				<section data-fls-watcher="" class="page__contact-address contact-address">
+				<section data-fls-watcher="" data-fls-watcher-once="" class="page__contact-address contact-address">
 					<div class="contact-address__container">
 						<div data-fls-blockhead="" class="contact-address__blockhead blockhead blockhead--portfolio">
 							<div class="blockhead__label">Locaction</div>
@@ -164,7 +164,7 @@
 						</div>
 					</div>
 				</section>
-				<section data-fls-watcher="" class="page__place place">
+				<section data-fls-watcher="" data-fls-watcher-once="" class="page__place place">
 					<div class="place__container">
 						<div data-fls-blockhead="" class="place__blockhead blockhead blockhead--place">
 							<h2 class="blockhead__title">let's discuss making your interior like a dream place!</h2>
