--- a/dananz/index.html
+++ b/dananz/index.html
@@ -8,11 +8,11 @@
 		<meta name="viewport" content="width=device-width, initial-scale=1.0">
 		<link rel="shortcut icon" href="assets/img/favicon.ico">
 		<title>Home</title>
-		<script type="module" crossorigin="" src="./js/app.min.js?v=1755934725306"></script>
-		<script type="module" crossorigin="" src="./js/digcounter.min.js?v=1755934725306"></script>
-		<link rel="stylesheet" crossorigin="" href="./css/app.min.css?v=1755934725306">
-		<link rel="stylesheet" crossorigin="" href="./css/index.min.css?v=1755934725306">
-		<link rel="stylesheet" crossorigin="" href="./css/aboutblock.min.css?v=1755934725306">
+		<script type="module" crossorigin="" src="./js/app.min.js?v=1755935516756"></script>
+		<script type="module" crossorigin="" src="./js/digcounter.min.js?v=1755935516756"></script>
+		<link rel="stylesheet" crossorigin="" href="./css/app.min.css?v=1755935516756">
+		<link rel="stylesheet" crossorigin="" href="./css/index.min.css?v=1755935516756">
+		<link rel="stylesheet" crossorigin="" href="./css/aboutblock.min.css?v=1755935516756">
 		<link rel="preload" as="style" href="./css/webfonts.min.css">
 		<link rel="stylesheet" media="print" onload="this.onload=null;this.removeAttribute('media');" href="./css/webfonts.min.css">
 	</head>
@@ -56,7 +56,7 @@
 				</div>
 			</header>
 			<main class="page page--home">
-				<section data-fls-watcher="" class="page__hero hero">
+				<section data-fls-watcher="" data-fls-watcher-once="" class="page__hero hero">
 					<div class="hero__container">
 						<div data-fls-blockhead="" class="hero__blockhead blockhead blockhead--hero">
 							<h1 class="blockhead__title">Design your interor with high quality.</h1>
@@ -86,7 +86,7 @@
 						</picture>
 					</div>
 				</section>
-				<section data-fls-watcher="" class="page__about about">
+				<section data-fls-watcher="" data-fls-watcher-once="" class="page__about about">
 					<div class="about__container">
 						<div data-fls-blockhead="" class="about__blockhead blockhead blockhead--about">
 							<div class="blockhead__label">ABOUT</div>
@@ -123,7 +123,7 @@
 						</div>
 					</div>
 				</section>
-				<section data-fls-watcher="" class="page__service service">
+				<section data-fls-watcher="" data-fls-watcher-once="" class="page__service service">
 					<div class="service__container">
 						<div class="service__body body-service">
 							<div data-fls-blockhead="" class="body-service__blockhead blockhead blockhead--service">
@@ -164,7 +164,7 @@
 						</div>
 					</div>
 				</section>
-				<section data-fls-watcher="" class="page__product product">
+				<section data-fls-watcher="" data-fls-watcher-once="" class="page__product product">
 					<div class="product__container">
 						<div data-fls-blockhead="" class="product__blockhead blockhead blockhead--product">
 							<div class="blockhead__content">
@@ -209,7 +209,7 @@
 						</ul>
 					</div>
 				</section>
-				<section data-fls-watcher="" class="page__material material">
+				<section data-fls-watcher="" data-fls-watcher-once="" class="page__material material">
 					<div class="material__container">
 						<div data-fls-blockhead="" class="material__blockhead blockhead blockhead--material">
 							<div class="blockhead__label">MATERIAL</div>
@@ -242,7 +242,7 @@
 						</div>
 					</div>
 				</section>
-				<section data-fls-watcher="" class="page__place place">
+				<section data-fls-watcher="" data-fls-watcher-once="" class="page__place place">
 					<div class="place__container">
 						<div data-fls-blockhead="" class="place__blockhead blockhead blockhead--place">
 							<h2 class="blockhead__title">let's discuss making your interior like a dream place!</h2>
