--- a/dananz/portfolio.html
+++ b/dananz/portfolio.html
@@ -8,10 +8,10 @@
 		<meta name="viewport" content="width=device-width, initial-scale=1.0">
 		<link rel="shortcut icon" href="assets/img/favicon.ico">
 		<title>Portfolio</title>
-		<script type="module" crossorigin="" src="./js/app.min.js?v=1755934725304"></script>
-		<link rel="stylesheet" crossorigin="" href="./css/app.min.css?v=1755934725304">
-		<link rel="stylesheet" crossorigin="" href="./css/portfolio.min.css?v=1755934725304">
-		<link rel="stylesheet" crossorigin="" href="./css/aboutblock.min.css?v=1755934725304">
+		<script type="module" crossorigin="" src="./js/app.min.js?v=1755935516754"></script>
+		<link rel="stylesheet" crossorigin="" href="./css/app.min.css?v=1755935516754">
+		<link rel="stylesheet" crossorigin="" href="./css/portfolio.min.css?v=1755935516754">
+		<link rel="stylesheet" crossorigin="" href="./css/aboutblock.min.css?v=1755935516754">
 		<link rel="preload" as="style" href="./css/webfonts.min.css">
 		<link rel="stylesheet" media="print" onload="this.onload=null;this.removeAttribute('media');" href="./css/webfonts.min.css">
 	</head>
@@ -55,7 +55,7 @@
 				</div>
 			</header>
 			<main class="page page--portfolio">
-				<section data-fls-watcher="" class="page__portfolio-hero portfolio-hero">
+				<section data-fls-watcher="" data-fls-watcher-once="" class="page__portfolio-hero portfolio-hero">
 					<div class="portfolio-hero__container">
 						<div data-fls-blockhead="" class="portfolio-hero__blockhead blockhead blockhead--center">
 							<h2 class="blockhead__title">Portofolio</h2>
@@ -73,7 +73,7 @@
 						</div>
 					</div>
 				</section>
-				<section data-fls-watcher="" class="page__portfolio-work portfolio-work">
+				<section data-fls-watcher="" data-fls-watcher-once="" class="page__portfolio-work portfolio-work">
 					<div class="portfolio-work__container">
 						<div data-fls-blockhead="" class="portfolio-work__blockhead blockhead blockhead--portfolio">
 							<div class="blockhead__label">Portfolio</div>
@@ -202,7 +202,7 @@
 						</div>
 					</div>
 				</section>
-				<section data-fls-watcher="" class="page__choose choose">
+				<section data-fls-watcher="" data-fls-watcher-once="" class="page__choose choose">
 					<div class="choose__container">
 						<div data-fls-blockhead="" class="choose__blockhead blockhead blockhead--choose">
 							<div class="blockhead__label">SERVICE</div>
@@ -256,7 +256,7 @@
 						</div>
 					</div>
 				</section>
-				<section data-fls-watcher="" class="page__place place">
+				<section data-fls-watcher="" data-fls-watcher-once="" class="page__place place">
 					<div class="place__container">
 						<div data-fls-blockhead="" class="place__blockhead blockhead blockhead--place">
 							<h2 class="blockhead__title">let's discuss making your interior like a dream place!</h2>
