--- a/dananz/services.html
+++ b/dananz/services.html
@@ -8,9 +8,9 @@
 		<meta name="viewport" content="width=device-width, initial-scale=1.0">
 		<link rel="shortcut icon" href="assets/img/favicon.ico">
 		<title>Services</title>
-		<script type="module" crossorigin="" src="./js/app.min.js?v=1755934725303"></script>
-		<link rel="stylesheet" crossorigin="" href="./css/app.min.css?v=1755934725303">
-		<link rel="stylesheet" crossorigin="" href="./css/services.min.css?v=1755934725303">
+		<script type="module" crossorigin="" src="./js/app.min.js?v=1755935516756"></script>
+		<link rel="stylesheet" crossorigin="" href="./css/app.min.css?v=1755935516756">
+		<link rel="stylesheet" crossorigin="" href="./css/services.min.css?v=1755935516756">
 		<link rel="preload" as="style" href="./css/webfonts.min.css">
 		<link rel="stylesheet" media="print" onload="this.onload=null;this.removeAttribute('media');" href="./css/webfonts.min.css">
 	</head>
@@ -54,7 +54,7 @@
 				</div>
 			</header>
 			<main class="page page--services">
-				<section data-fls-watcher="" class="page__services-hero services-hero">
+				<section data-fls-watcher="" data-fls-watcher-once="" class="page__services-hero services-hero">
 					<div class="about-hero__container">
 						<div data-fls-blockhead="" class="services-hero__blockhead blockhead blockhead--center">
 							<h2 class="blockhead__title">Services</h2>
@@ -72,7 +72,7 @@
 						</div>
 					</div>
 				</section>
-				<section data-fls-watcher="" class="page__achievement-services achievement-services">
+				<section data-fls-watcher="" data-fls-watcher-once="" class="page__achievement-services achievement-services">
 					<div class="achievement-services__container">
 						<div data-fls-blockhead="" class="achievement-services__blockhead blockhead blockhead--achievement">
 							<div class="blockhead__label">ACHIEVEMENT</div>
@@ -135,7 +135,7 @@
 						</div>
 					</div>
 				</section>
-				<section data-fls-watcher="" class="page__product product">
+				<section data-fls-watcher="" data-fls-watcher-once="" class="page__product product">
 					<div class="product__container">
 						<div data-fls-blockhead="" class="product__blockhead blockhead blockhead--product">
 							<div class="blockhead__content">
@@ -180,7 +180,7 @@
 						</ul>
 					</div>
 				</section>
-				<section data-fls-watcher="" class="page__place place">
+				<section data-fls-watcher="" data-fls-watcher-once="" class="page__place place">
 					<div class="place__container">
 						<div data-fls-blockhead="" class="place__blockhead blockhead blockhead--place">
 							<h2 class="blockhead__title">let's discuss making your interior like a dream place!</h2>
