--- a/dananz/teams.html
+++ b/dananz/teams.html
@@ -8,9 +8,9 @@
 		<meta name="viewport" content="width=device-width, initial-scale=1.0">
 		<link rel="shortcut icon" href="assets/img/favicon.ico">
 		<title>Teams</title>
-		<script type="module" crossorigin="" src="./js/app.min.js?v=1755934725304"></script>
-		<link rel="stylesheet" crossorigin="" href="./css/app.min.css?v=1755934725304">
-		<link rel="stylesheet" crossorigin="" href="./css/teams.min.css?v=1755934725304">
+		<script type="module" crossorigin="" src="./js/app.min.js?v=1755935516755"></script>
+		<link rel="stylesheet" crossorigin="" href="./css/app.min.css?v=1755935516755">
+		<link rel="stylesheet" crossorigin="" href="./css/teams.min.css?v=1755935516755">
 		<link rel="preload" as="style" href="./css/webfonts.min.css">
 		<link rel="stylesheet" media="print" onload="this.onload=null;this.removeAttribute('media');" href="./css/webfonts.min.css">
 	</head>
@@ -54,7 +54,7 @@
 				</div>
 			</header>
 			<main class="page page--teams">
-				<section data-fls-watcher="" class="page__teams-hero teams-hero">
+				<section data-fls-watcher="" data-fls-watcher-once="" class="page__teams-hero teams-hero">
 					<div class="teams-hero__container">
 						<div data-fls-blockhead="" class="teams-hero__blockhead blockhead blockhead--center">
 							<h2 class="blockhead__title">Our Teams</h2>
@@ -72,7 +72,7 @@
 						</div>
 					</div>
 				</section>
-				<section data-fls-watcher="" class="page__teams teams">
+				<section data-fls-watcher="" data-fls-watcher-once="" class="page__teams teams">
 					<div class="teams__container">
 						<div data-fls-blockhead="" class="teams__blockhead blockhead blockhead--teams">
 							<div class="blockhead__label">Designer</div>
@@ -191,7 +191,7 @@
 						</div>
 					</div>
 				</section>
-				<section data-fls-watcher="" class="page__choose choose">
+				<section data-fls-watcher="" data-fls-watcher-once="" class="page__choose choose">
 					<div class="choose__container">
 						<div data-fls-blockhead="" class="choose__blockhead blockhead blockhead--choose">
 							<div class="blockhead__label">SERVICE</div>
@@ -245,7 +245,7 @@
 						</div>
 					</div>
 				</section>
-				<section data-fls-watcher="" class="page__place place">
+				<section data-fls-watcher="" data-fls-watcher-once="" class="page__place place">
 					<div class="place__container">
 						<div data-fls-blockhead="" class="place__blockhead blockhead blockhead--place">
 							<h2 class="blockhead__title">let's discuss making your interior like a dream place!</h2>
