--- a/dananz/about.html
+++ b/dananz/about.html
@@ -8,10 +8,10 @@
 		<meta name="viewport" content="width=device-width, initial-scale=1.0">
 		<link rel="shortcut icon" href="assets/img/favicon.ico">
 		<title>About Us</title>
-		<script type="module" crossorigin="" src="./js/app.min.js?v=1755934725305"></script>
-		<script type="module" crossorigin="" src="./js/digcounter.min.js?v=1755934725305"></script>
-		<link rel="stylesheet" crossorigin="" href="./css/app.min.css?v=1755934725305">
-		<link rel="stylesheet" crossorigin="" href="./css/about.min.css?v=1755934725305">
+		<script type="module" crossorigin="" src="./js/app.min.js?v=1755935516757"></script>
+		<script type="module" crossorigin="" src="./js/digcounter.min.js?v=1755935516757"></script>
+		<link rel="stylesheet" crossorigin="" href="./css/app.min.css?v=1755935516757">
+		<link rel="stylesheet" crossorigin="" href="./css/about.min.css?v=1755935516757">
 		<link rel="preload" as="style" href="./css/webfonts.min.css">
 		<link rel="stylesheet" media="print" onload="this.onload=null;this.removeAttribute('media');" href="./css/webfonts.min.css">
 	</head>
@@ -55,7 +55,7 @@
 				</div>
 			</header>
 			<main class="page page--about">
-				<section data-fls-watcher="" class="page__about-hero about-hero">
+				<section data-fls-watcher="" data-fls-watcher-once="" class="page__about-hero about-hero">
 					<div class="about-hero__container">
 						<div data-fls-blockhead="" class="about-hero__blockhead blockhead blockhead--center">
 							<h2 class="blockhead__title">About</h2>
@@ -73,7 +73,7 @@
 						</div>
 					</div>
 				</section>
-				<section data-fls-watcher="" class="page__achievement achievement">
+				<section data-fls-watcher="" data-fls-watcher-once="" class="page__achievement achievement">
 					<div class="achievement__container">
 						<div data-fls-blockhead="" class="achievement__blockhead blockhead blockhead--achievement">
 							<div class="blockhead__label">ACHIEVEMENT</div>
@@ -101,7 +101,7 @@
 						</div>
 					</div>
 				</section>
-				<section data-fls-watcher="" class="page__choose choose">
+				<section data-fls-watcher="" data-fls-watcher-once="" class="page__choose choose">
 					<div class="choose__container">
 						<div data-fls-blockhead="" class="choose__blockhead blockhead blockhead--choose">
 							<div class="blockhead__label">SERVICE</div>
@@ -155,7 +155,7 @@
 						</div>
 					</div>
 				</section>
-				<section data-fls-watcher="" class="page__place place">
+				<section data-fls-watcher="" data-fls-watcher-once="" class="page__place place">
 					<div class="place__container">
 						<div data-fls-blockhead="" class="place__blockhead blockhead blockhead--place">
 							<h2 class="blockhead__title">let's discuss making your interior like a dream place!</h2>
