--- a/dananz/portfolio-details.html
+++ b/dananz/portfolio-details.html
@@ -8,9 +8,9 @@
 		<meta name="viewport" content="width=device-width, initial-scale=1.0">
 		<link rel="shortcut icon" href="assets/img/favicon.ico">
 		<title>Portfolio-details</title>
-		<script type="module" crossorigin="" src="./js/app.min.js?v=1755934725305"></script>
-		<link rel="stylesheet" crossorigin="" href="./css/app.min.css?v=1755934725305">
-		<link rel="stylesheet" crossorigin="" href="./css/portfolio-details.min.css?v=1755934725305">
+		<script type="module" crossorigin="" src="./js/app.min.js?v=1755935516752"></script>
+		<link rel="stylesheet" crossorigin="" href="./css/app.min.css?v=1755935516752">
+		<link rel="stylesheet" crossorigin="" href="./css/portfolio-details.min.css?v=1755935516752">
 		<link rel="preload" as="style" href="./css/webfonts.min.css">
 		<link rel="stylesheet" media="print" onload="this.onload=null;this.removeAttribute('media');" href="./css/webfonts.min.css">
 	</head>
@@ -54,7 +54,7 @@
 				</div>
 			</header>
 			<main class="page page--portfolio-details">
-				<section data-fls-watcher="" class="page__portfolio-hero portfolio-hero">
+				<section data-fls-watcher="" data-fls-watcher-once="" class="page__portfolio-hero portfolio-hero">
 					<div class="portfolio-hero__container">
 						<div data-fls-blockhead="" class="portfolio-hero__blockhead blockhead blockhead--center">
 							<h2 class="blockhead__title">Minimalist Room</h2>
@@ -72,7 +72,7 @@
 						</div>
 					</div>
 				</section>
-				<section data-fls-watcher="" class="page__portfolio-info portfolio-info">
+				<section data-fls-watcher="" data-fls-watcher-once="" class="page__portfolio-info portfolio-info">
 					<div class="portfolio-info__container">
 						<div class="portfolio-info__items">
 							<h4 class="portfolio-info__title">Project Overview</h4>
@@ -99,7 +99,7 @@
 						</div>
 					</div>
 				</section>
-				<div data-fls-watcher="" class="page__gallery gallery">
+				<div data-fls-watcher="" data-fls-watcher-once="" class="page__gallery gallery">
 					<div class="gallery__container">
 						<a href="#" class="gallery__link">
 							<picture>
@@ -129,7 +129,7 @@
 						</a>
 					</div>
 				</div>
-				<section data-fls-watcher="" class="page__place place">
+				<section data-fls-watcher="" data-fls-watcher-once="" class="page__place place">
 					<div class="place__container">
 						<div data-fls-blockhead="" class="place__blockhead blockhead blockhead--place">
 							<h2 class="blockhead__title">let's discuss making your interior like a dream place!</h2>
