--- a/sushi/index.html
+++ b/sushi/index.html
@@ -8,8 +8,8 @@
 		<meta name="viewport" content="width=device-width, initial-scale=1.0">
 		<link rel="shortcut icon" href="assets/img/favicon.ico">
 		<title>Home</title>
-		<script type="module" crossorigin="" src="./js/index.min.js?v=1756232056434"></script>
-		<link rel="stylesheet" crossorigin="" href="./css/index.min.css?v=1756232056434">
+		<script type="module" crossorigin="" src="./js/index.min.js?v=1756232775780"></script>
+		<link rel="stylesheet" crossorigin="" href="./css/index.min.css?v=1756232775780">
 		<link rel="preload" as="style" href="./css/webfonts.min.css">
 		<link rel="stylesheet" media="print" onload="this.onload=null;this.removeAttribute('media');" href="./css/webfonts.min.css">
 	</head>
@@ -813,9 +813,9 @@
 			<footer data-fls-footer="" class="footer">
 				<div class="footer__picture">
 					<picture>
-						<source media="(max-width: 600px)" srcset="./assets/img/footer-image-600.webp" type="image/webp">
-						<source media="(max-width: 1200px)" srcset="./assets/img/footer-image-1200.webp" type="image/webp">
-						<img class="footer__image ibg" alt="Image" src="./assets/img/footer-image.webp">
+						<source media="(max-width: 600px)" srcset="./assets/img/footer/bg-600.webp" type="image/webp">
+						<source media="(max-width: 1200px)" srcset="./assets/img/footer/bg-1200.webp" type="image/webp">
+						<img class="footer__image ibg" alt="Image" src="./assets/img/footer/bg.webp">
 					</picture>
 				</div>
 				<div class="footer__container">
